kubernetes/hackathon2023-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: hackathon2023-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/hackathon2023-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/hackathon2023-default: "true"
